--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,23 @@ body{
   position: relative;
   transform: rotate(-45deg);
   box-shadow: -10px 10px 90px #f20044 ;
+  animation: heart 0.6s linear infinite;
+}
+
+@keyframes heart{
+  0%{
+    transform: rotate(-45deg) scale(1.07);
+
+  }
+  80%{
+    transform: rotate(-45deg) scale(1.0);
+
+  }
+  100%{
+    transform: rotate(-45deg) scale(0.8);
+
+  }
+
 }
 
 .heart::before{
@@ -25,6 +42,8 @@ body{
   background: #f20044;
   top: -50%;
   border-radius: 50px;
+  box-shadow: -10px -10px 90px #f20044 ;
+
 }
 
 .heart::after{
@@ -35,4 +54,6 @@ body{
   background: #f20044;
   right:-50%;
   border-radius: 50px;
+  box-shadow: 10px 10px 90px #f20044 ;
+
 }
